[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 28.0
margin_top = 71.0
margin_right = 348.0
margin_bottom = 194.0
color = Color( 0.0509804, 0.00392157, 0.00392157, 1 )

[node name="Label" type="Label" parent="ColorRect"]
margin_left = 7.0
margin_top = 3.0
margin_right = 196.0
margin_bottom = 68.0

[node name="Button" type="Button" parent="."]
margin_left = 59.0
margin_top = 243.0
margin_right = 278.0
margin_bottom = 291.0
text = "Insira 10 numeros e clique aqui!"

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 29.0
margin_top = 11.0
margin_right = 195.0
margin_bottom = 54.0

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 438.0
margin_top = 72.0
margin_right = 795.0
margin_bottom = 197.0
color = Color( 0.0156863, 0, 0, 1 )

[node name="Label2" type="Label" parent="ColorRect2"]
margin_left = 2.0
margin_top = 3.0
margin_right = 353.0
margin_bottom = 122.0

[node name="Button2" type="Button" parent="."]
margin_left = 544.0
margin_top = 249.0
margin_right = 689.0
margin_bottom = 291.0
text = "Ordenar lista"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
